<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- BabyCare -->
    <string name="app_name">BabyCare</string>

    <!-- Strings related to login -->
    <string name="sign_up">建立帳號</string>
    <string name="log_in">登入</string>
    <string name="action_sign_in_short">登入</string>

    <!-- Parent sign up -->
    <string name="hint_account">英文字母或數字</string>
    <string name="hint_password">英文字母或數字</string>
    <string name="hint_password_again">請再輸入一次您的密碼</string>
    <string name="hint_email">忘記密碼以E-Mail通知</string>
    <string name="hint_parent_name">方便保母聯絡用</string>
    <string name="hint_parent_address">只顯示部份地址</string>
    <string name="hint_parent_phone">您同意後才顯示</string>
    <string name="hint_parent_babycare_count">(希望保母最多照顧幾個寶寶)</string>
    <string name="hint_parent_note">其它補充資訊</string>

    <!-- Sitter list  -->
    <string name="contact">媒合保母</string>
    <string name="contact_sent">已傳送媒合邀請</string>
    <string name="detail"><u>更多資料 </u> > </string>

    <!-- Parent list -->
    <string name="parent_contact">媒合爸媽</string>

    <!-- Content descriptions -->
    <string name="descr_image">圖片</string>

    <!-- Dialog -->
    <string name="dialog_remind_you">提醒一下</string>
    <string name="dialog_agree">確定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_login_please_wait">登入中，請稍等...</string>
    <string name="dialog_signup_please_wait">註冊中，請稍等...</string>

    <!-- Error messages -->
    <string name="error_intro">"請 "</string>
    <string name="error_blank_username">輸入帳號</string>
    <string name="error_blank_password">輸入密碼</string>
    <string name="error_mismatched_passwords">再輸入一次密碼</string>
    <string name="error_join">"， 並 "</string>
    <string name="error_end">。</string>

    <string name="error_no_network">網路連線不通，請確認網路狀態或稍後再試。</string>
    <string name="error_account_or_password_wrong">帳號或密碼錯誤，請重新確認後再試。</string>
    <string name="error_signup_account_already_taken">此帳號已經存在，請重新命名。</string>
    <string name="dialog_i_know">我知道了</string>
    <string name="remind_to_login">這個功能只有會員才能使用，要現在註冊/登入嗎？</string>

    <!-- Sitter info title -->
    <string name="sitter_name_ttile">姓名：</string>
    <string name="sitter_age_ttile">年齡：</string>
    <string name="sitter_babycare_time_ttile">托育時段：</string>
    <string name="sitter_babycare_count_ttile">目前托育人數：</string>
    <string name="sitter_address_ttile">地址：</string>
    <string name="sitter_education_ttile">教育程度：</string>
    <string name="sitter_experience_ttile">保母經驗：</string>
    <string name="sitter_skills_ttile">其他才能：</string>
    <string name="sitter_licence_ttile">證照：</string>
    <string name="sitter_introduction_ttile">關於保母：</string>
    <string name="sitter_tel_ttile">聯絡電話：</string>
    <string name="sitter_skill_number_ttile">技術證號：</string>
    <string name="sitter_register_number_ttile">登記證號：</string>

    <!-- Parent info title -->
    <string name="parent_name_ttile">陳先生</string>
    <string name="parent_address_ttile">地址：</string>
    <string name="parent_babycare_plan_ttile">預計托育時間：</string>
    <string name="parent_babycare_count_ttile">希望保母照顧人數：</string>
    <string name="parent_baby_age_ttile">小孩歲數：</string>
    <string name="parent_baby_gender_ttile">小孩姓別：</string>
    <string name="parent_introduction_ttile">註記：</string>

    <!-- Sitter home image upload -->
    <string name="uploading">上傳中</string>
    <string name="upload_success">上傳完成</string>
    <string name="upload_error">上傳錯誤</string>
    <string name="parent_babycare_time_title">偏好時段：</string>

</resources>
