<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　　 帳號："
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/normal_text" />

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/full_edittext_selector"
                android:hint="@string/hint_account"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　　 密碼："
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/normal_text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/full_edittext_selector"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　　　　　 "
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/full_edittext_selector"
                android:hint="@string/hint_password_again"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　  E-Mail："
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/normal_text" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/full_edittext_selector"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</merge>